--- a/.env
+++ b/.env
@@ -26,7 +26,14 @@ APP_SECRET=a66e3ae68343a67ae8011c584734a54e
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+
+
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db" # default
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7" # default
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8" # default
+
+DATABASE_URL=mysql://root@localhost:3306/Sygma-Web-Service # Wamp
+#DATABASE_URL=mysql://root:root@mysql:3306/Sygma-Web-Service # Docker
+
+
 ###< doctrine/doctrine-bundle ###
