[Service & Login] add loginFormAuthenticator and add first service card/ form add service

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,6 +12,10 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
+    role_hierarchy: [ROLE_ADMIN, ROLE_USER]
+
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -19,6 +23,12 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAuthenticator # base
+        
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
