--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,8 +3,7 @@ security:
         App\Entity\User:
             algorithm: auto
 
-    # https://symfony.com/doc/current/security/experimental_authenticators.html
-    enable_authenticator_manager: true
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -13,17 +12,23 @@ security:
                 class: App\Entity\User
                 property: email
 
-    role_hierarchy: [ROLE_ADMIN, ROLE_USER]
-
+   
+    role_hierarchy:
+        ROLE_ADMIN:  [ROLE_ADMIN,ROLE_USER]
+        ROLE_USER:   [ROLE_USER]
 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            anonymous: true
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator # base
+            #custom_authenticator: App\Security\LoginFormAuthenticator # base
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
         
             logout:
                 path: app_logout
