--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    # service
+    img_service_directory: '%kernel.project_dir%/public/Service/img'
+
 
 services:
     # default configuration for services in *this* file
@@ -23,3 +26,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\Upload:
+        arguments:
+            # article
+            $targetImgService: '%img_service_directory%'
+
