--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     # service
-    img_service_directory: '%kernel.project_dir%/public/Service/img'
+    img_service_directory: '%kernel.project_dir%/public/MentoringService/img'
 
 
 services:
